# finance_asist

./: .gitignore  CMakeLists.txt  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/java/com/finance/app/: MainActivity.kt  NativeBridge.kt  q
bridge/: native-lib.cpp
core/: FinanceCore.cpp  FinanceCore.h
crypto/: CryptoEngine.cpp  CryptoEngine.h
db/: DatabaseManager.cpp  DatabaseManager.h
parser/: DataParser.cpp  DataParser.h
verifier/: LedgerVerifier.cpp  LedgerVerifier.h
